tirando mt de sobre__texto

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
     <div class="container d-lg-flex text-center pt-4 pb-4 gap-3">
       <img class="sobre__img" src="./images/restaurante.jpg" alt="imagem do local" >
-      <div class="sobre__texto text-start mt-3">
+      <div class="sobre__texto text-start mt-3 mt-lg-0">
         <h2>Sobre <strong class="verde">a pizzaria</strong></h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores inventore fugiat illo deserunt, vero exercitationem distinctio, eos amet tenetur, fugit libero excepturi tempore ducimus quos eveniet voluptates! 
